Split SKILL.md into core + REFERENCE.md, add script lint, bump to 1.0.0
SKILL.md: 270 -> 138 lines (-49%). Core runtime only: setup, loop rules,
iteration steps. No more encyclopedic patterns loaded on every session.

REFERENCE.md: 105 lines loaded ON DEMAND by the LLM when stuck/plateauing.
Contains: decision tree, 15-dimension checklist, exploration discipline,
deep optimization patterns, performance knowledge base.

Context hook now points to REFERENCE.md on plateau/wall/convergence instead
of embedding verbose instructions inline.

scripts/lint-scripts.sh: static checks on all bash scripts:
- bash -n syntax validation
- Dangerous $(grep -c ... || echo ...) double-output pattern detection
- $(( $(cmd || echo X) )) arithmetic substitution detection
- shellcheck (if available)

Also fixed: grep -c double-output bug in status.sh (lines 35-39, 101)
and stop-hook.sh (line 72) — same class as the 0.7.3 fix.